--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Xpostalworker · Soulhood Academy</title><link rel="icon" href="/favicon.ico">
-<style>:root{--blue:#003366;--gray:#2F3437;--bg:#f5f7fa}body{margin:0;background:var(--bg);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;color:var(--gray)}.wrap{max-width:880px;margin:0 auto;padding:64px 20px;text-align:center}h1{color:var(--blue);font-size:clamp(28px,4vw,44px);margin:0 0 8px}.lead{color:#5b6670;margin:0 0 24px}.btn{display:inline-block;margin:8px;padding:12px 16px;border-radius:12px;text-decoration:none;font-weight:800}.primary{background:#003366;color:#fff}.secondary{border:2px solid #003366;color:#003366}footer{margin-top:40px;color:#5b6670;font-size:14px}</style>
-</head><body><main class="wrap"><h1>Xpostalworker · Soulhood Academy</h1>
-<p class="lead">Building the <strong>Karesuna Method</strong> — start assistants inside your world, not the web.</p>
-<p><a class="btn primary" href="https://xpostalworker.github.io/karesuna-site/">View Karesuna Pricing</a>
-<a class="btn secondary" href="https://www.patreon.com/" target="_blank" rel="noopener">Patreon</a></p>
-<footer>© 2025 Xpostalworker · Not affiliated with Brave, OpenAI, Anthropic, or Google.</footer></main></body></html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Karesuna Method — Pricing</title>
+  <title>Karesuna Method — Assistant Launch Pad Kit</title>
+  <meta name="description" content="Start assistants inside your world — not the web. A context-first onboarding kit for predictable, shippable outputs in 25 minutes.">
+  <link rel="icon" href="https://xpostalworker.github.io/karesuna-site/favicon.ico">
+  <meta property="og:title" content="Karesuna Method — Assistant Launch Pad Kit">
+  <meta property="og:description" content="Start assistants inside your world — not the web. A context-first onboarding kit for predictable, shippable outputs in 25 minutes.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://xpostalworker.github.io/karesuna-site/Karesuna_Hero_Mockup.png">
+  <meta property="og:url" content="https://xpostalworker.github.io/karesuna-site/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Karesuna Method — Assistant Launch Pad Kit">
+  <meta name="twitter:description" content="Start assistants inside your world — not the web. A context-first onboarding kit for predictable, shippable outputs in 25 minutes.">
+  <meta name="twitter:image" content="https://xpostalworker.github.io/karesuna-site/Karesuna_Hero_Mockup.png">
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Product",
+    "name":"Karesuna Method — Assistant Launch Pad Kit",
+    "description":"Start assistants inside your world — not the web. A context-first onboarding kit for predictable, shippable outputs in 25 minutes.",
+    "brand":{"@type":"Brand","name":"Karesuna"},
+    "image":["https://xpostalworker.github.io/karesuna-site/Karesuna_Hero_Mockup.png"],
+    "url":"https://xpostalworker.github.io/karesuna-site/",
+    "offers":[
+      {"@type":"Offer","name":"Starter","priceCurrency":"USD","price":"19","availability":"https://schema.org/InStock","url":"https://xpostalworker.github.io/karesuna-site/#checkout-starter"},
+      {"@type":"Offer","name":"Creator","priceCurrency":"USD","price":"59","availability":"https://schema.org/InStock","url":"https://xpostalworker.github.io/karesuna-site/#checkout-creator"},
+      {"@type":"Offer","name":"Pro","priceCurrency":"USD","price":"199","availability":"https://schema.org/InStock","url":"https://xpostalworker.github.io/karesuna-site/#checkout-pro"}
+    ]
+  }
+  </script>
+
+</head>
+<body><h1>Karesuna Method</h1><p>Upload the full page later.</p></body></html>
