--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <meta property="og:description" content="Start assistants inside your world — not the web.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://xpostalworker.github.io/karesuna-site/">
-  <meta property="og:image" content="https://xpostalworker.github.io/karesuna-site/Karesuna_Hero_Mockup.png">
+  <meta property="og:image" content="https://xpostalworker.github.io/karesuna-site/Karesuna_Hero_1200x630_SAFE.png?v=1">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Karesuna Method — Assistant Launch Pad Kit">
   <meta name="twitter:description" content="Start assistants inside your world — not the web.">
-  <meta name="twitter:image" content="https://xpostalworker.github.io/karesuna-site/Karesuna_Hero_Mockup.png">
+  <meta name="twitter:image" content="https://xpostalworker.github.io/karesuna-site/Karesuna_Hero_1200x630_SAFE.png?v=1">
   <!-- Product schema -->
   <script type="application/ld+json">
   {
